# cs2-minneapolis-zoning

./: .gitignore  METHODOLOGY.md  README.es.md  README.md  cities.json  index.html  start-visualizer.bat
.github/ISSUE_TEMPLATE/: city-request.yml
docs/: QUICKSTART.md  TROUBLESHOOTING.md  adapting-to-other-cities.md  github-publishing.md  reddit_posts.md
docs/plans/: 2026-05-13-cs2-minneapolis-improvements.md  2026-05-13-cs2-zone-realignment.md  2026-05-13-zoning-visualizer-fixes.md  2026-05-15-toolkit-reorg.md  2026-05-16-modulo-servicios-implementation.md  2026-05-16-modulo-servicios.md  2026-05-17-featured-cities-pack.md
docs/specs/: 2026-05-15-toolkit-reorg-design.md  2026-05-17-featured-cities-pack-design.md
docs/superpowers/plans/: 2026-05-18-pbf-migration.md
src/: classifiers.py  cs2_zones.py  extract_msbuildings.py  extract_vial.py  extract_zoning.py  overpass_client.py  patch_colors.py  pyproject.toml  take_screenshots.py  vial_zones.py
src/services/: __init__.py  classifiers.py  extract.py  zones.py
src/shared/: landing.py  overpass_client.py  registry.py  thumbnails.py
src/vial/: classifiers.py  extract.py  zones.py
src/zoning/: classifiers.py  extract.py  extract_google_buildings.py  zones.py
tests/: test_classifiers.py  test_queries.py
tests/services/: __init__.py  test_classifiers.py  test_extract_city.py  test_zones.py
tests/shared/: test_registry.py  test_thumbnails.py
tests/vial/: test_extract_city.py  test_vial.py
tests/zoning/: test_classifiers.py  test_extract_city.py  test_google_buildings.py  test_queries.py
visualizer/: README.md  cities.json  index.html  map.html
visualizer/cities/amsterdam/: manifest.json
visualizer/cities/charleston/: manifest.json
visualizer/cities/madison/: manifest.json
visualizer/cities/mafra_sc_brazil/: datos_zonificacion.js  manifest.json
visualizer/cities/minneapolis/: datos_servicios.js  manifest.json
visualizer/cities/trondheim/: manifest.json
