[project]
name = "cs2-minneapolis-zoning"
version = "2.0.0"
description = "GIS pipeline: extract OpenStreetMap data for Cities Skylines 2"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "shapely>=2.0.0",
]

# Dependencias para `uv run pytest`
[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

# Entry point único — el resto (vial, services, transport) se añadirán en sesiones futuras
[project.scripts]
extract-zoning = "extract_zoning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling necesita saber qué archivos empaquetar (los .py están sueltos en src/, no en un paquete)
[tool.hatch.build.targets.wheel]
only-include = [
    "classifiers.py",
    "cs2_zones.py",
    "extract_zoning.py",
    "extract_msbuildings.py",
    "overpass_client.py",
    "patch_colors.py",
]
