[project]
name = "cs2-osm-toolkit"
version = "3.3.4"
description = "GIS toolkit modular: extract OpenStreetMap data for Cities: Skylines 2"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "shapely>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

# Entry points por módulo
[project.scripts]
extract-zoning = "zoning.extract:main"
extract-vial   = "vial.extract:main"
extract-services = "services.extract:main"
generate-landing = "shared.landing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Layout de sub-packages — hatchling empaqueta los directorios completos
[tool.hatch.build.targets.wheel]
packages = ["shared", "zoning", "vial", "services"]
